# diversolab_app

./: README.md  package-lock.json  package.json  pyproject.toml  splent.manifest.json
docker/: .env.dev.example  .env.prod.example  Dockerfile.diversolab_app.dev  Dockerfile.diversolab_app.prod  docker-compose.dev.yml  docker-compose.prod.yml
entrypoints/: entrypoint.dev.sh  entrypoint.prod.sh
scripts/: 00_core_requirements_dev.sh  00_install_features.sh  01_compile_assets.sh  05_0_start_app_dev.sh  05_1_start_app_prod.sh
src/diversolab_app/: config.py
